# komi-zone

./: .gitignore  .gitmodules  .mcp.json  README.md  agent-catalog.md
mcp-servers/anamnesis/: .gitignore  LICENSE  README.md  pyproject.toml
mcp-servers/anamnesis/.anamnesis/: config.json
mcp-servers/anamnesis/anamnesis/: __init__.py
mcp-servers/anamnesis/anamnesis/analysis/: __init__.py  complexity_analyzer.py  dependency_graph.py
mcp-servers/anamnesis/anamnesis/cli/: __init__.py  debug_tools.py  interactive_setup.py  main.py
mcp-servers/anamnesis/anamnesis/config/: __init__.py  config.py
mcp-servers/anamnesis/anamnesis/extractors/: __init__.py  import_extractor.py  pattern_extractor.py  symbol_extractor.py
mcp-servers/anamnesis/anamnesis/intelligence/: __init__.py  embedding_engine.py  pattern_engine.py  semantic_engine.py
mcp-servers/anamnesis/anamnesis/interfaces/: __init__.py  engines.py
mcp-servers/anamnesis/anamnesis/mcp_server/: __init__.py  __main__.py  server.py
mcp-servers/anamnesis/anamnesis/parsing/: __init__.py  ast_types.py  language_parsers.py  tree_sitter_wrapper.py
mcp-servers/anamnesis/anamnesis/services/: __init__.py  codebase_service.py  intelligence_service.py  learning_service.py  session_manager.py  type_converters.py
mcp-servers/anamnesis/anamnesis/storage/: __init__.py  adapters.py  migrations.py  resilient_backend.py  schema.py  sqlite_backend.py  sync_backend.py
mcp-servers/anamnesis/anamnesis/types/: __init__.py  analysis.py  config.py  core.py  errors.py  file_change.py  guards.py  mcp_responses.py  patterns.py  response_envelope.py  semantic.py
mcp-servers/anamnesis/anamnesis/utils/: __init__.py  circuit_breaker.py  console_progress.py  logger.py  (+7 more)
mcp-servers/anamnesis/scripts/: validate_grammars.py
mcp-servers/anamnesis/tests/: conftest.py
(+147 files in other folders)
